# RustWebServer

./: Cargo.toml
src/: crud_controller.rs  db_connection.rs  main.rs  model.rs  repository.rs  schema.rs
