[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["secrets", "json", "tls", "http2"]}
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
uuid = "1.8.0"
log = "0.4.21"
tokio = "1.36.0"
