[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
diesel = "2.1.5"
diesel-async = { version = "0.4.1", features = ["postgres"] }
serde = { version = "1.0.197", features = ["derive"] }